--- a/RaisingMinds/school_profile/static/school_profile/css/school_profile.css
+++ b/RaisingMinds/school_profile/static/school_profile/css/school_profile.css
@@ -1,13 +1,13 @@
 
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap");
 body{
-    /* font-family: Poppins; */
+    
     background: #f5f5f5;
     width: fit-content;
     max-height: fit-content;
 }
 
-@media (max-width: 985px)  {
+/* @media (max-width: 985px)  {
     .dropdown-toggle::after {
       content: "";
       margin: 0;
@@ -26,7 +26,7 @@ body{
         width: 150px;
         
     }
-}
+} */
 
 /*------------ end dropdown ------------------------------------------------*/
 
