--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -44,7 +44,7 @@
                 <a class="nav-item nav-link" href="#team">Team</a>
                 <a class="nav-item nav-link" href="#contact">Contact</a>
                 {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="#">Community</a>
+                <a class="nav-item nav-link {% if navbar == 'community' %} active {% endif %}" href="{% url 'community' %}">Community</a>
                 {% else %}
                 {% endif %}
                 {% if user.is_authenticated %}
