--- a/RaisingMinds/post/templates/post/community.html
+++ b/RaisingMinds/post/templates/post/community.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+{% extends "app/index.html" %}
+{% load static %}
+{% block title %}| Community{% endblock %}
+
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,11 +12,14 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-      <!-- external CSS -->
-      <link rel="stylesheet" type="text/css" href="./community.css">
-      <title>Community</title>
-</head>
-<body>
+      <!-- external CSS --> {% endcomment %}
+      {% block CSS %}
+      {{block.super}}
+      <link rel="stylesheet" type="text/css" href="{% static 'post/css/community.css' %}">
+      {% endblock %}
+      {% comment %} <title>Community</title>
+</head> {% endcomment %}
+{% comment %} <body>
            <!-- nav bar -->
            <nav class="navbar navbar-expand-lg navbar-dark bg-dark  fixed-top padding">
             <div class="container Inpadding ">
@@ -71,9 +78,9 @@
                   
                 </div>
             </div>
-        </nav>
+        </nav> {% endcomment %}
         <!--------------------------END nav bar-------------------------------------->
-        
+{% block content %}
         <!-- post section  -->
 <section>
         <div class="container-fluid text-center mt-5">
@@ -159,8 +166,8 @@
           </div>
         </section>
           <!-- Bootstap javascript CDN link -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    {% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-</body>
-</html>
+    crossorigin="anonymous"></script> {% endcomment %}
+{% endblock %}
+{% block footer %}{% endblock %}
