update login & signup
change link

--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -99,8 +99,8 @@
                   <a href="{% url 'logout' %}" class="btn-get-started">Logout</a> &nbsp;&nbsp;&nbsp;
                 {% else %}
                 <div class="d-flex">
-                  <a href="{% url 'login' %}" class="btn-get-started">Sign up</a> &nbsp;&nbsp;&nbsp;
-                  <a href="{% url 'signup' %}" class="btn-get-started"><span>Log in</span></a>
+                  <a href="{% url 'signup' %}" class="btn-get-started">Sign up</a> &nbsp;&nbsp;&nbsp;
+                  <a href="{% url 'login' %}" class="btn-get-started"><span>Log in</span></a>
                 </div>
                 {% endif %}
             </div>           
