--- a/RaisingMinds/users/templates/users/base.html
+++ b/RaisingMinds/users/templates/users/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Validation</title>
+    <title>forget-password</title>
     
     <!-- Favicons -->
     <link href="{% static 'app/images/RM-Icon.ico' %}" rel="icon">
