paypal payment gateway

--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -393,7 +393,7 @@
                   <div class="social">
                     <a href="https://github.com/HeshithaSandeepa"><i class="fa fa-github"></i></a>
                     <a href="https://www.facebook.com/heshitha.sandeepa.750/"><i class="fa fa-facebook"></i></a>
-                    <a href="www.linkedin.com/in/heshitha-sandeepa-8a225b24a"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/heshitha-sandeepa-8a225b24a/"><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
