--- a/RaisingMinds/post/templates/post/community.html
+++ b/RaisingMinds/post/templates/post/community.html
@@ -147,7 +147,8 @@
                               </div>
                           </div>
                           <div >
-                            <button type="button" class="btn donate btn-outline-primary mb-3 " >Donate</button>
+                            <button type="button" class="btn donate btn-outline-primary mb-3" onclick="window.location.href='{% url 'checkout' post.id %}'" >Donate</button>
+                            
                           </div>
                           
                         </div><br>
