--- a/RaisingMinds/school_profile/templates/school_profile/school_profile.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_profile.html
@@ -96,8 +96,8 @@
                             <div class="modal-body">
                                 <input type="text" class=" title mb-3" placeholder="Enter title here" required>
                                 <textarea class="description mb-2" placeholder="Enter Description here ..." required ></textarea>
-                                <input class ="goalAmount mb-2"type="number" placeholder="Enter Goal amount Rs/="> 
-                                <input  class="phoneNo mb-2"type="number" placeholder="Enter Phone No" required>
+                                <input type="number" class=" title mb-3" placeholder="Enter Goal amount ..." required> 
+                               
                                 <input type="file" id="photoInput" accept="image/jpeg, image/png, image/jpg" required>
                                 <button class="text-end" type="button" onclick="uploadPhoto()">Upload Photo</button>   
 
