--- a/RaisingMinds/school_profile/templates/school_profile/school_profile.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_profile.html
@@ -84,7 +84,8 @@
                 <!-- Modal create post -->
             
             
-            <form>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
@@ -94,11 +95,11 @@
                                     aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <input type="text" class=" title mb-3" placeholder="Enter title here" required>
-                                <textarea class="description mb-2" placeholder="Enter Description here ..." required ></textarea>
-                                <input type="number" class=" title mb-3" placeholder="Enter Goal amount ..." required> 
+                                <input type="text" name="title" class=" title mb-3" placeholder="Enter title here" required>
+                                <textarea class="description mb-2" name="description" placeholder="Enter Description here ..." required ></textarea>
+                                <input type="number" name="goal_donation" class=" title mb-3" placeholder="Enter Goal amount ..." required> 
                                
-                                <input type="file" id="photoInput" accept="image/jpeg, image/png, image/jpg" required>
+                                <input type="file" name="post_img" id="photoInput" accept="image/jpeg, image/png, image/jpg" required>
                                 <input  class="text-end" type="button" onclick="uploadPhoto()" required>Upload Photo
 
                             </div>
