--- a/RaisingMinds/school_profile/templates/school_profile/school_registration.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_registration.html
@@ -18,7 +18,7 @@
 
 <body>
   <!-- nav bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark  fixed-top padding">
+  {% comment %} <nav class="navbar navbar-expand-lg navbar-dark bg-dark  fixed-top padding">
     <div class="container Inpadding ">
       <!-- Logo -->
       <div class="fixedLogo">
@@ -75,7 +75,7 @@
 
         </div>
       </div>
-  </nav>
+  </nav> {% endcomment %}
   <!--------------------------END nav bar-------------------------------------->
 
   <!-- form -->
@@ -84,6 +84,7 @@
   <div class="row justify-content-center formStyle">
     <div class="col-md-5 ">
       <form class="container" method="post">
+        {% csrf_token %}
         <div class="fotmStyle2">
           <h2 class="text-center mb-4">School Registration Form</h2>
           <div class="form-group mb-2">
