school profile create form

--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -59,9 +59,13 @@
                                   <li><a class="dropdown-item" href="{% url 'userprofile' %}"><i class="fas fa-sliders-h fa-fw"></i> View Profile</a></li>
                                   <li><hr class="dropdown-divider"></li>
                                   {% if user.schoolprofile %}
-                                  <li><a class="dropdown-item" href="{% url 'schoolprofile' school_profile.pk %}"><i class="fas fa-cog fa-fw"></i>School Profile</a></li>
+                                    {% if user.schoolprofile.is_verified %}
+                                    <li><a class="dropdown-item" href="{% url 'schoolprofile' school_profile.pk %}"><i class="fas fa-cog fa-fw"></i>School Profile</a></li>
+                                    {% else %}
+                                    <li><a class="dropdown-item" href="{% url 'index'%}"><i class="fas fa-cog fa-fw"></i>Pending School Profile</a></li>
+                                    {% endif %}
                                   {% else %}
-                                  <li><a class="dropdown-item" href="{% url 'index' %}"><i class="fas fa-cog fa-fw"></i> Create School Profile</a></li>
+                                  <li><a class="dropdown-item" href="{% url 'schoolprofilecreate' %}"><i class="fas fa-cog fa-fw"></i> Create School Profile</a></li>
                                   {% endif %}
                                   <li><hr class="dropdown-divider"></li>
                                   {% if user.is_superuser %}
