--- a/RaisingMinds/school_profile/templates/school_profile/school_registration.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_registration.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+{% extends "app/index.html" %}
+{% load static %}
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,15 +10,18 @@
   <title>form</title>
   <!-- bootstrap CDN links -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/jax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
   <!-- icon links -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" type="text/css" href="./school-registration-form.css">
-</head>
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> {% endcomment %}
+  {% block CSS %}
+  {{block.super}}
+  <link rel="stylesheet" type="text/css" href="{% static 'school_profile/css/school_registration_form.css' %}">
+  {% endblock %}
+{% comment %} </head> {% endcomment %}
 
-<body>
+{% comment %} <body> {% endcomment %}
   <!-- nav bar -->
   {% comment %} <nav class="navbar navbar-expand-lg navbar-dark bg-dark  fixed-top padding">
     <div class="container Inpadding ">
@@ -78,12 +83,13 @@
   </nav> {% endcomment %}
   <!--------------------------END nav bar-------------------------------------->
 
+{% block content %}
   <!-- form -->
   <br><br><br><br>
 
   <div class="row justify-content-center formStyle">
     <div class="col-md-5 ">
-      <form class="container" method="post">
+      <form class="container" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="fotmStyle2">
           <h2 class="text-center mb-4">School Registration Form</h2>
@@ -102,7 +108,7 @@
           <div class=" mb-2">
             <div class="form-group col">
               <label for="Email1" class="mb-1">School Email address:</label>
-              <input type="email" class="form-control" id="Email1" placeholder="Enter email" required name="email">
+              <input type="email" class="form-control" id="Email1" placeholder="Enter email" required name="schoolEmail">
             </div>
           </div>
           <div class="row mb-2">
@@ -114,7 +120,7 @@
             <div class="form-group col">
               <label for="agentDesignation" class="mb-1">School District :</label>
               <input type="text" class="form-control" id="agentDesignation" placeholder="Enter school District"
-                required>
+                required name="schoolDistrict">
             </div>
 
           </div>
@@ -127,7 +133,7 @@
 
             <div class="form-group col mb-2">
               <label for="Select" selected class="mb-1">School Type:</label>
-              <select class="form-control" id="Select" required>
+              <select class="form-control" id="Select" required name="schoolType">
                 <option selected>Select Your School Type</option>
                 <option>Mixed School</option>
                 <option>Boyes School</option>
@@ -149,12 +155,12 @@
 
             <div class="form-group mb-2 col">
               <label for="File1"> Verification document :</label>
-              <input type="file" class="form-control-file" id="File1" accept="application/pdf"name="File1">
+              <input type="file" class="form-control-file" id="File1" accept="application/pdf"name="verificationDoc">
 
             </div>
             <div class="form-group mb-3 col imageP">
               <label for="image">School profile picture : </label>
-              <input type="File" class="form-control-file2" id="image" accept="image/jpeg,image/png,image/jpg," name="image">
+              <input type="File" class="form-control-file2" id="image" accept="image/jpeg,image/png,image/jpg," name="schoolProfileImage">
 
 
             </div>
@@ -227,10 +233,12 @@
   <br><br>
 
   <!-- bootstrap javascript link -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  {% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> {% endcomment %}
 
-</body>
+{% endblock %}
 
-</html>
+{% comment %} </body>
+
+</html> {% endcomment %}
