--- a/RaisingMinds/post/templates/post/community.html
+++ b/RaisingMinds/post/templates/post/community.html
@@ -1,84 +1,11 @@
 {% extends "app/index.html" %}
 {% load static %}
 {% block title %}| Community{% endblock %}
-
-{% comment %} <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- Bootstap CDN link -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-      <!-- external CSS --> {% endcomment %}
-      {% block CSS %}
-      {{block.super}}
+{% block CSS %}
+    {{block.super}}
       <link rel="stylesheet" type="text/css" href="{% static 'post/css/community.css' %}">
-      {% endblock %}
-      {% comment %} <title>Community</title>
-</head> {% endcomment %}
-{% comment %} <body>
-           <!-- nav bar -->
-           <nav class="navbar navbar-expand-lg navbar-dark bg-dark  fixed-top padding">
-            <div class="container Inpadding ">
-                <!-- Logo -->
-                <div class="fixedLogo">
-                    <a href="#">
-                        <div class="logo" class="h-8 size bg-dark">Raising Minds</div>
-                    </a>
-                </div>
-                <!-- Navbar toggle -->
-                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <!-- Collapse -->
-                <div class="collapse navbar-collapse backGround" id="navbarCollapse">
-                    <!-- Nav -->
-                    <div class="navbar-nav mx-lg-auto">
-                        <a class="nav-item nav-link " href="#">Home</a>
-                        <a class="nav-item nav-link " href="#">About</a>
-                        <a class="nav-item nav-link " href="#">Projects</a>
-                        <a class="nav-item nav-link" href="#">Team</a>
-                        <a class="nav-item nav-link" href="#">Contact</a>
-                        <a class="nav-item nav-link " href="#">Community</a>
-                        <!-- dropdown -->
-                        <div id="dropdown" class="img ">
-                            <ul class="navbar-nav mb-2 mb-lg-0 ">
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        <img src="/images/profile_icon.jpeg" alt="Profile pictre">
-                                    </a>
-                                    <ul class="dropdown-menu ">
-                                        <li><a class="dropdown-item" href="#"><i class="fas fa-sliders-h fa-fw"></i> Account Settings</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#"><i class="fas fa-cog fa-fw"></i> Create School Profile</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-fw"></i> Log Out</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-    
-    
-                    </div>
-    
-                    <!-- Donate button -->
-                    <div class="d-flex align-items-lg-center mt-3 mt-lg-0 disabled">
-                        <a href="#" class="btn btnDonate-style btn-sm btn-primary w-full w-lg-auto custom-btn">
-                            Donate
-                        </a>
-                  
-                </div>
-            </div>
-        </nav> {% endcomment %}
+    {% endblock %}
+
         <!--------------------------END nav bar-------------------------------------->
 {% block content %}
         <!-- post section  -->
@@ -136,18 +63,21 @@
                         <div class="progressbar p-2">
                             <h4>Progress</h4>
                             <div class="progress">
-                              <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                              <div class="progress-bar" role="progressbar" style="width: {% widthratio post.current_amount post.donate_amount 100 %}%;" aria-valuenow="{% widthratio post.current_amount post.donate_amount 100 %}" aria-valuemin="0" aria-valuemax="100">{% widthratio post.current_amount post.donate_amount 100 %}%</div>
                             </div>
                             <div class="row">
                               <div class="col-sm-6 mt-1">
-                                  <p>Goal : LKR 100,000</p>
+                                  <p>Goal : LKR {{post.donate_amount}}</p>
                               </div>
                               <div class="col-sm-6 mt-1">
-                                  <p>Current : LKR 50,000</p>
+                                  <p>Current : LKR {{post.current_amount}}</p>
                               </div>
                           </div>
                           <div >
-                            <button type="button" class="btn donate btn-outline-primary mb-3" onclick="window.location.href='{% url 'checkout' post.id %}'" >Donate</button>
+                            <button type="button" class="btn donate btn-outline-primary mb-3" onclick="window.location.href='{% url 'checkout' post.id %}'"
+                            {% if post.donate_amount <= post.current_amount %}disabled{% endif %}>
+                            Donate
+                            </button>
                             
                           </div>
                           
@@ -168,9 +98,6 @@
             </div>
           </div>
         </section>
-          <!-- Bootstap javascript CDN link -->
-    {% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script> {% endcomment %}
+
 {% endblock %}
 {% block footer %}{% endblock %}
