--- a/RaisingMinds/post/templates/post/community.html
+++ b/RaisingMinds/post/templates/post/community.html
@@ -76,7 +76,7 @@
                           <div >
                             <button type="button" class="btn donate btn-outline-primary mb-3" onclick="window.location.href='{% url 'checkout' post.id %}'"
                             {% if post.donate_amount <= post.current_amount %}disabled{% endif %}>
-                            Donate
+                            {% if post.donate_amount <= post.current_amount %}Completed{% else %}Donate{% endif %}
                             </button>
                             
                           </div>
