--- a/RaisingMinds/users/templates/users/signup.html
+++ b/RaisingMinds/users/templates/users/signup.html
@@ -79,15 +79,17 @@
                     <button type="submit" class="form-control btn btn-primary rounded submit px-3">Sign Up</button>
                 </div>
                 <div class="text-center">
-                    <p>or</p>
+                    <!-- <p>or</p> -->
+                    <p class="mt-2">Do you have an account? <a href="{% url 'login' %}"> Login here</p>
+                    </a></p>
                 </div>
 
                 <!-- Sign up with Google -->
-                <a href="#"> <button type="button"
+                <!-- <a href="#"> <button type="button"
                     class="form-control btn btn-primary rounded submit px-3 ">
                     <i class="fab fa-google"></i>Sign Up with Google
                  </button>
-                </a>
+                </a> -->
                 </form>
             </div>
             </div>
