--- a/RaisingMinds/school_profile/templates/school_profile/school_profile.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_profile.html
@@ -100,7 +100,7 @@
                                 <input type="number" name="goal_donation" class=" title mb-3" placeholder="Enter Goal amount ..." required> 
                                
                                 <input type="file" name="post_img" id="photoInput" accept="image/jpeg, image/png, image/jpg" required>
-                                <input  class="text-end" type="button" onclick="uploadPhoto()" required>Upload Photo
+                                <input  class="text-end" type="button" onclick="uploadPhoto()" required value="Upload photo">
 
                             </div>
                             <div class="modal-footer">
