--- a/RaisingMinds/users/templates/users/login.html
+++ b/RaisingMinds/users/templates/users/login.html
@@ -19,33 +19,44 @@
    
 </head>
 <body>
-<!-- nav bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0 py-3 fixed-top">
-  <div class="container">
-    <!-- Logo -->
-    <div class="fixedLogo">
-      <a href="#"><div class="logo" class="h-8 size bg-dark">Raising Minds</div></a>
+
+   <!-- nav bar -->
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0 py-3 fixed-top ">
+    <div class="container">
+        <!-- Logo -->
+        <div class="fixedLogo">
+            <a href="#">
+                <div class="logo" class="h-8 size bg-dark">Raising Minds</div>
+            </a>
+        </div>
+        <!-- Navbar toggle -->
+        <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Collapse -->
+        <div class="collapse navbar-collapse backGround" id="navbarCollapse">
+            <!-- Nav -->
+            <div class="navbar-nav mx-lg-auto">
+                <a class="nav-item nav-link " href="{% url 'index' %}">Home</a>
+                <a class="nav-item nav-link " href="{% url 'index' %}#about">About</a>
+                <a class="nav-item nav-link " href="{% url 'projects' %}">Projects</a>
+                <a class="nav-item nav-link" href="{% url 'index' %}#team">Team</a>
+                <a class="nav-item nav-link" href="{% url 'index' %}#contact">Contact</a>
+            </div>
+        </div>
     </div>
-    <!-- Navbar toggle -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-      aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- Collapse -->
-    <div class="collapse navbar-collapse backGround" id="navbarCollapse">
-      <!-- Nav -->
-      <div class="navbar-nav mx-lg-auto">
-        <a class="nav-item nav-link " href="{% url 'index' %}">Home</a>
-        <a class="nav-item nav-link " href="{% url 'index' %}#about">About</a>
-        <a class="nav-item nav-link " href="{% url 'projects' %}">Projects</a>
-        <a class="nav-item nav-link" href="{% url 'index' %}#team">Team</a>
-        <a class="nav-item nav-link" href="{% url 'index' %}#contact">Contact</a>
-      </div>
-      </div>
-    </div>
-  </nav>
-  <!-- end of nav bar -->
-<br>
+</nav>
+<!-- End of nav bar -->
+
+{% comment %} {% if messages %}  
+{% for msg in messages %}
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Holy guacamole!</strong>{{msg}}
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endfor %}
+{% endif %} {% endcomment %}
     <!-- login form sction -->
   <section class="ftco-section mt-4">
     <div class="container loginForm">
