--- a/RaisingMinds/school_profile/templates/school_profile/school_profile.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_profile.html
@@ -196,16 +196,22 @@
                         <p>School Name : {{school_profile.school_name}}</p>
                       </li>
                       <li>
-                        <p>Description  : </p>     
+                        <p>School Type : {{school_profile.school_name}}</p>
+                      </li>
+                      <li>
+                        <p>School Address : {{school_profile.address}}</p>
+                      </li>
+                      <li>
+                        <p>Description  : {{school_profile.Description}}</p>     
                       </li> 
                       <li>
                         <p >Principal's Name : {{school_profile.principal_name}}</p>
                       </li> 
                       <li>
-                        <p >Contact : 0912247841</p>
+                        <p >Contact : {{school_profile.school_telephone}}</p>
                       </li> 
                       <li>
-                        <p >Email : schoolUkwattha@gmail.com </p>
+                        <p >Email : {{school_profile.school_email}} </p>
                       </li> 
                       
                     </ul>
