--- a/RaisingMinds/school_profile/templates/school_profile/school_profile.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_profile.html
@@ -163,11 +163,26 @@
                         <p>
                             {{post.content}}
                         </p>
-
-                        <p id="post-translation">
-                                <button>Donate</button>
-                            </p>
-
+                    <!----------------------------------progress bar--------------------------->
+                        <div class="progressbar ">
+                            <h4 class="mb-3">Progress</h4>
+                            <div class="progress" >
+                              <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                            </div>
+                            <div class="row">
+                              <div class="col-sm-6 mt-1">
+                                  <p>Goal : LKR 100,000</p>
+                              </div>
+                              <div class="col-sm-6 mt-1">
+                                  <p>Current : LKR 50,000</p>
+                              </div>
+                          </div>
+                          <div  class="text-center">
+                            <button type="button" class="btn donate btn-outline-primary mb-3 " >Donate</button>
+                          </div>
+                          
+                        </div>
+  <!----------------------------------progress bar--------------------------->
                     </div>
                     <div id="post-interactions">
                         <div id="interactions-btns">
