--- a/RaisingMinds/school_profile/templates/school_profile/school_profile.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_profile.html
@@ -158,7 +158,11 @@
                         </div>
                     </div>
                     <div id="post-data">
+                        
+                        <h5 class="mt-1 mb-1 text-center postTitle">Rebuilding the Drinking water supply
+                            and collecting funds for a Science Lab.</h5>
                        
+                 
                         <img src="{{post.post_image.url}}">
                         <p>
                             {{post.content}}
