--- a/RaisingMinds/school_profile/static/school_profile/css/school_profile.css
+++ b/RaisingMinds/school_profile/static/school_profile/css/school_profile.css
@@ -1,7 +1,14 @@
 
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap");
+
+html{
+    height: 100%;
+    width: 100%;
+}
+
 body{
-    
+    width: 100%;
+    height: 100%;
     background: #f5f5f5;
     width: fit-content;
     max-height: fit-content;
@@ -549,7 +556,7 @@ div.container aside#right-aside {
     background-color: #fff;
     border: 1px solid #cfcfcf;
     border-radius: 2px;
-    height:350px;
+    height: fit-content;
     width: 330px;
     position: fixed;
     left: 70%;
@@ -570,7 +577,7 @@ div.container aside#right-aside {
 
 
 aside#right-aside div#rec-section {
-    height: 270px;
+    height: fit-content;
     padding: 16px 0;
    
 }
